--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,10 @@ first_name: Jiwon
 middle_name:
 last_name: Yoon
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Everyday is perfect! contact me @ younjw812@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  # A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  Yoon Jiwon's portfolio, it might help you!
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -263,8 +264,8 @@ display_categories: ["external-services"] # these categories will be displayed o
 # -----------------------------------------------------------------------------
 
 scholar:
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Yoon]
+  first_name: [Ji Won]
 
   style: apa
   locale: en
