--- a/_config.yml
+++ b/_config.yml
@@ -630,15 +630,7 @@ jekyll_get_json:
     json: assets/json/resume.json # it can also be an url
 
 jsonresume:
-  - basics
-  - work
-  - education
-  - publications
-  - projects
-  - volunteer
-  - awards
-  - certificates
-  - skills
-  - languages
-  - interests
-  - references
+  - Research Internship
+  - Education
+  - Leadership
+  - Honor and Awards
